// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarView changes tabs correctly 1`] = `
<div
  className=""
>
  <ForwardRef(WithStyles)
    indicatorColor="primary"
    onChange={[Function]}
    textColor="primary"
    value="browse"
    variant="fullWidth"
  >
    <ForwardRef(WithStyles)
      className=""
      label="Search"
      value="search"
    />
    <ForwardRef(WithStyles)
      className=""
      label="Browse"
      value="browse"
    />
    <ForwardRef(WithStyles)
      className=""
      label="Cart"
      value="cart"
    />
  </ForwardRef(WithStyles)>
  <Connect(Browse) />
</div>
`;

exports[`SidebarView changes to cart correctly 1`] = `
<div
  className=""
>
  <ForwardRef(WithStyles)
    indicatorColor="primary"
    onChange={[Function]}
    textColor="primary"
    value="cart"
    variant="fullWidth"
  >
    <ForwardRef(WithStyles)
      className=""
      label="Search"
      value="search"
    />
    <ForwardRef(WithStyles)
      className=""
      label="Browse"
      value="browse"
    />
    <ForwardRef(WithStyles)
      className=""
      label="Cart"
      value="cart"
    />
  </ForwardRef(WithStyles)>
  <Connect(Component) />
</div>
`;

exports[`SidebarView renders correctly 1`] = `
<div
  className=""
>
  <ForwardRef(WithStyles)
    indicatorColor="primary"
    onChange={[Function]}
    textColor="primary"
    value="search"
    variant="fullWidth"
  >
    <ForwardRef(WithStyles)
      className=""
      label="Search"
      value="search"
    />
    <ForwardRef(WithStyles)
      className=""
      label="Browse"
      value="browse"
    />
    <ForwardRef(WithStyles)
      className=""
      label="Cart"
      value="cart"
    />
  </ForwardRef(WithStyles)>
  <Connect(Component) />
</div>
`;
